Fixed an issue with the yellow color rendering on IE8

--- a/css.css
+++ b/css.css
@@ -287,7 +287,7 @@ img#talk_bubble {
 }
 
 #important {
-	background: rgba(235, 230, 146, 1.0);
+	background: #EBE692;
 	position: relative;
 	width: 350px;
 	padding: 10px;
@@ -295,6 +295,7 @@ img#talk_bubble {
 	-webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.18);
 	-moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.18);
 	box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.18);
+	margin-bottom: 10px;
 }
 
 #important:before {
@@ -305,8 +306,7 @@ img#talk_bubble {
 	content: '';
 	width: 100%;
 	height: 100%;
-	background: rgba(235, 230, 146, 1.0);
-
+	background: #EBE692;
 	border: 1px solid rgba(0, 0, 0, 0.150);
 	-webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.19);
 	-moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.19);
@@ -326,8 +326,7 @@ img#talk_bubble {
 	content: '';
 	width: 100%;
 	height: 100%;
-	background: rgba(235, 230, 146, 1.0);
-
+	background: #EBE692;
 	border: 1px solid rgba(0, 0, 0, 0.150);
 	-webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.19);
 	-moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.19);
